# snake

./: CMakeLists.txt  README.md
include/game/: game.hpp
include/graphics/: screen.hpp
scripts/: build.sh  clean.sh  config.sh  run.sh
src/: CMakeLists.txt
src/game/: CMakeLists.txt  game.cc
src/graphics/: CMakeLists.txt  screen.cc
src/snake/: CMakeLists.txt  snake.cc
